--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
-    "mysql2": "^3.15.3"
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3",
+    "uuid": "^13.0.0"
   }
 }
